--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "fa-icons": "^0.2.0",
+    "font-awesome": "^4.7.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
