--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
-    "@nuxtjs/composition-api": "^0.32.0",
+    "@nuxtjs/composition-api": "^0.31.0",
+    "@vueuse/core": "^8.1.1",
     "core-js": "^3.19.3",
     "firebase": "^9.6.7",
     "nuxt": "^2.15.8",
