--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/core": "^8.1.1",
     "core-js": "^3.19.3",
     "firebase": "^9.6.7",
+    "gsap": "^3.9.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
