--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.6.7",
     "gsap": "^3.9.1",
     "nuxt": "^2.15.8",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
